# baremetal-arm

./: .travis.yml  LICENSE  LICENSE-CC-BY-SA  LICENSE-MIT.md  LICENSE.md  README.md
doc/: .gitignore  00_introduction.md  01_setup.md  02_first_boot.md  03_bootloader.md  04_cenv.md  05_cmake.md  06_uart.md  07_interrupts.md  08_scheduling.md  09_context_switch.md  build-ebook.sh  s5.tex  yaml.md
src/: .gitignore  buildall.sh
src/01_setup/: README.md  setup.sh
src/02_first_boot/: README.md  build.sh  clean.sh  linkscript.ld  run.sh  startup.s
src/02_first_boot/better_hang/: build.sh  clean.sh  linkscript.ld  run.sh  startup.s
src/03_bootloader/: .gitignore  build.sh  clean.sh  linkscript.ld  run.sh
src/04_c/: build.sh  clean.sh  create-sd.sh  cstart.c  linkscript.ld  startup.s
src/04_cenv/: .gitignore  build.sh  cstart.c  run.sh  startup.s
src/05_cmake/: CMakeLists.txt
src/05_cmake/src/: linkscript.ld
src/06_uart/: CMakeLists.txt
src/06_uart/src/: cstart.c  linkscript.ld  uart_pl011.c  uart_pl011.h
src/07_interrupts/: CMakeLists.txt
src/07_interrupts/src/: cpu.h  cpu_a9.h  cstart.c  gic.c  gic.h  irq.c  irq.h  startup.s  uart_pl011.c  uart_pl011.h
src/08_scheduler/: CMakeLists.txt
src/08_scheduler/src/: .linkscript.ld.swp  cpu_a9.h  cstart.c  linkscript.ld  ptimer.c  ptimer.h  sched.c  sched.h  systime.c  systime.h  tasks.c  tasks.h  uart_pl011.c  uart_pl011.h
src/09_context_switch/: CMakeLists.txt  syscall.c
src/09_context_switch/src/: cpu_a9.h  cstart.c  process.h  ptimer.h  sched.c  sched.h  sched_preemptive.c  sched_preemptive.h  startup.s  syscall.c  systime.c  systime.h  tasks.c  uart_pl011.h
src/common_uboot/: Makefile
src/common_uboot/arch/: Kconfig
src/common_uboot/arch/arm/: Kconfig
src/common_uboot/arch/arm/cpu/armv7/vf610/: Kconfig
src/common_uboot/configs/: vexpress_ca9x4_defconfig
src/common_uboot/drivers/usb/: Kconfig
src/common_uboot/fs/: Kconfig
src/common_uboot/include/: config_distro_bootcmd.h
